# MITR

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODOS.md  extra_system_prompt.txt  features.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  reddit_prompt_videogen_prompt.md  reka_reddit_prompt.md  stories_curated.jsonl  stream_state_internal_quant.tflite  subreddits.md
.github/workflows/: deploy-backend-ec2.yml
docs/: agnost-ai-integration.md
future plan/: elder-insights-future-plan.md
minimal/: .gitignore  CMakeLists.txt  README.md  check-production-config.sh  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.gateway  sdkconfig.defaults.gateway-server-wake  set-bridge-uri.sh  set-device-config.sh  wakeup-word-fix-plan.md
minimal/components/tflite_microfrontend/: CMakeLists.txt
minimal/main/: CMakeLists.txt  Kconfig.projbuild  atomic_compat.c  audio_preprocessor.c  audio_preprocessor.h  board.c  boot_feedback.c  boot_feedback.h  device_api.c  device_api.h  device_storage.c  device_storage.h  example.c  example.h  gateway_client.c  gateway_client.h  gateway_client_server_wake.c  idf_component.yml  latency_trace.c  latency_trace.h  main.c  media.c  media.h  mel_features.c  mel_features.h  network.c  network.h  ota_manager.c  ota_manager.h  preconnect_audio_src.c  preconnect_audio_src.h  provisioning.c  provisioning.h  session_timeout.c  session_timeout.h  sounds.c  sounds.h  wake_model_data.c  wake_model_data.h  wake_word.c  (+2 more)
minimal/main/assets/: boot_ready.raw  voice_connected.raw  voice_disconnected.raw
minimal/tools/: mic_loopback_probe.py  plot_latency.py
mitr-backend/: .dockerignore  .env.example  Dockerfile.agent  Dockerfile.api  README.md  Untitled  Uttarakhand_MITR_Govt_Presentation.pptx  Uttarakhand_MITR_Govt_Presentation_Notes.md  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
mitr-backend/data/: stories.hi.jsonl
mitr-backend/deploy/: .env.prod.digest-worker.template  .env.prod.insights-worker.template  .env.prod.pipecat-gateway.template  .env.prod.reminder-worker.template  .env.prod.template  .env.prod.voice-gateway.template  SECURITY_AUDIT_STATUS.md  SECURITY_LAUNCH_CHECKLIST.md  SECURITY_TESTING_GUIDE.md  aws-infrastructure.yml  bootstrap-aws.sh  bootstrap-ec2.sh  bootstrap-service-env-files.sh  check-service-env-scope.sh  cloudwatch-agent.json  cloudwatch-endpoint-monitor.yml  configure-nginx.sh  deploy.sh  docker-compose.prod.yml  generate-prod-secrets.sh  healthcheck.sh  nginx.conf  nginx.http.conf  nginx.https.conf.template  preflight-prod-env.sh  push-env-to-ssm.sh  setup-aws-ops.sh  setup-cloudwatch.sh  setup-endpoint-monitoring.sh  setup-https.sh  sync-env-from-ssm.sh  www-placeholder.html
mitr-backend/docs/: checkout-integration.md  esp32-audio-output-first-step.md  esp32-production-architecture.md
mitr-backend/drizzle/: 0000_chemical_blink.sql  0001_sad_norrin_radd.sql  0002_sparkling_raider.sql  0003_unified_sync.sql  0004_user_input_transcripts.sql  0005_insights_pipeline.sql  0006_daily_digest_and_feedback.sql  0007_elder_device_usage_sessions.sql  0008_care_plan_items.sql  0009_vengeful_white_queen.sql  0010_device_pairings.sql  0011_device_session_conversation_state.sql  0012_marvelous_serpent_society.sql  0013_persistent_device_agent.sql  0014_elder_journey_planner.sql  0015_elder_memory_context.sql  0016_mem0_memory_registry.sql  0017_swiggy_mcp.sql  0018_checkout_orders_promos.sql  0019_checkout_admin_users.sql  0020_email_templates.sql
mitr-backend/pipecat-gateway/: .env.example  README.md  WAKE_GATEWAY_ROLLBACK_2026-05-13.md  pyproject.toml
mitr-backend/pipecat-gateway/mitr_pipecat_gateway/: __init__.py  agnost.py  auth.py  bot.py  bot_common.py  bot_wake_phrase.py  serializer.py  server.py  tools.py
mitr-backend/pipecat-gateway/mitr_pipecat_gateway/prompts/: mitr_system_prompt.md
mitr-backend/pipecat-gateway/scripts/: realtime2_smoke.py
mitr-backend/pipecat-gateway/tests/: test_agnost.py  test_audio_config.py  test_auth.py  test_serializer.py  test_server_config.py  test_tool_activity_state.py  test_tool_execution_policy.py  test_wake_phrase_config.py
mitr-backend/scripts/: baseline-drizzle-ledger.ts  ingest-religious-corpus.ts  ingest-stories-corpus.ts  latency-baseline.json  latency-report.json  migrate-redis-to-postgres.ts  mint-livekit-output-token.ts  production-api-audit.mjs  profile-session-open.ts  seed-dev-account.ts  seed-firmware-release.ts  smoke-device-flow.ts  smoke-health.ts  test-agent-tools.ts  (+2 more)
mitr-mobile/: API_INVENTORY.md  README.md  app.json  package.json
mitr-wakeword-worker/: Dockerfile  README.md  pyproject.toml
mitr-wakeword-worker/models/: hey_livekit.meta.json  hi_reca.meta.json
mitr-wakeword-worker/src/mitr_wakeword_worker/: __main__.py  audio.py  backend.py  config.py  model.py  types.py  worker.py
mitr-wakeword-worker/training/: hi_reca.yaml
scripts/: check-local-workspace-secrets.sh  check-rbac-invariants.mjs  check-repo-secrets.sh  check-route-auth-coverage.mjs  security-abuse-seed-and-smoke.mjs  security-abuse-smoke.sh  security-hardening-checks.sh
(+1248 files in other folders)
