[project]
name = "mitr-wakeword-worker"
version = "0.1.0"
description = "Backend-owned wakeword worker for Mitr device rooms"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.10.0",
  "livekit>=1.0.16",
  "livekit-api>=1.0.0",
  "livekit-wakeword>=0.1.0",
  "numpy>=1.26.0",
  "redis>=5.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
