idf_component_register(
    SRCS
        "main.c"
        "example.c"
        "board.c"
        "media.c"
        "device_api.c"
        "device_storage.c"
        "boot_feedback.c"
        "network.c"
        "provisioning.c"
        "ota_manager.c"
        "atomic_compat.c"
        "sounds.c"
        "wake_word.c"
    INCLUDE_DIRS
        "."
    EMBED_FILES
        "assets/boot_ready.raw"
    PRIV_REQUIRES
        esp_http_client
        esp_https_ota
        esp_event
        esp_netif
        esp_wifi
        app_update
        protocomm
        wifi_provisioning
        json
        nvs_flash
        espressif__esp_audio_codec
        espressif__esp_capture
        espressif__esp-sr
        livekit__example_utils
        livekit__livekit
        tempotian__av_render
        tempotian__codec_board
        tempotian__media_lib_sal
    WHOLE_ARCHIVE
)
